--- a/app/static/css/grayscale.css
+++ b/app/static/css/grayscale.css
@@ -144,7 +144,7 @@ a:focus {
     display: table;
     width: 100%;
     height: auto;
-    padding: 100px 0;
+    padding: 50px 0;
     text-align: center;
     color: #fff;
     background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
@@ -258,7 +258,7 @@ a:focus {
 }
 
 .content-section {
-    padding-top: 100px;
+    padding-top: 50px;
 }
 
 .portfolio-section {
@@ -283,16 +283,17 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 250px;
+        padding-top: 75px;
+        padding-bottom: 75px;
     }
 
     .portfolio-section {
-        padding: 100px 0;
+        padding: 50px 0;
     }
 
     #map {
         height: 400px;
-        margin-top: 50px;
+
         vertical-align: middle;
     }
 }
