--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -40,7 +40,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-bar-chart"></i>  <span class="light">Top</span> Link
+                    <i class="fa fa-terminal"></i>  <span class="light">Home</span>
                 </a>
             </div>
 
@@ -87,14 +87,17 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="container content-section text-center">
+    <section id="about" class="container content-section text-center" width=50%>
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>About me</h2>
+                <h2>About</h2>
                 <p>
-                	memememe
-                </p>
-            </div>
+                	<img src="static/img/me.jpg" class="img-circle" alt="Me!" height=200px>
+                	</p>
+                	<br>
+                	Hipster ipsums courtesy of hipsum.co.
+                	Sartorial tofu tilde, fixie flexitarian gastropub leggings ethical marfa kitsch truffaut gentrify plaid tacos. Roof party paleo heirloom skateboard, yr pour-over organic truffaut master cleanse blue bottle chillwave kinfolk seitan tacos. Small batch kickstarter bitters, tousled bushwick cronut church-key green juice squid YOLO. Pop-up jean shorts pickled knausgaard squid, godard bespoke fap heirloom migas tousled pabst. Migas blog 3 wolf moon pop-up lomo, tofu literally pabst single-origin coffee austin. Twee fap sartorial, DIY brunch disrupt mlkshk yr etsy. Freegan kale chips banjo, blog lomo venmo whatever yr cronut biodiesel photo booth street art bushwick squid ethical.
+                	<p>
+                	                   <a href="http://www.linkedin.com/heidiwhiting" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn</span></a>
         </div>
     </section>
 
@@ -103,11 +106,22 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="row">
-		  <div class="col-sm-4"><h2>background</h2></div>
+		  <div class="col-sm-4"><h2>projects</h2>
+		  <br>
+		  Sartorial tofu tilde, fixie flexitarian gastropub leggings ethical marfa kitsch truffaut gentrify plaid tacos. Roof party paleo heirloom skateboard, yr pour-over organic truffaut master cleanse blue bottle chillwave kinfolk seitan tacos. Small batch kickstarter bitters, tousled bushwick cronut church-key green juice squid YOLO. Pop-up jean shorts pickled knausgaard squid, godard bespoke fap heirloom migas tousled pabst. Migas blog 3 wolf moon pop-up lomo, tofu literally pabst single-origin coffee austin. Twee fap sartorial, DIY brunch disrupt mlkshk yr etsy. Freegan kale chips banjo, blog lomo venmo whatever yr cronut biodiesel photo booth street art bushwick squid ethical.
+		  <br>
+		  </div>
 		  <div class="col-sm-4"> 
 		  <h2>code</h2>
+		  <br>
+		  3 wolf moon messenger bag echo park, selvage cred everyday carry intelligentsia authentic yr leggings neutra four dollar toast banh mi vegan. Dreamcatcher tousled actually fap iPhone, man braid banjo everyday carry. Church-key flexitarian 8-bit gluten-free polaroid, bespoke affogato. Biodiesel keytar DIY, pinterest butcher locavore knausgaard ugh iPhone yr ethical keffiyeh bicycle rights plaid. Ugh blue bottle kogi fap listicle. Shabby chic franzen sustainable 3 wolf moon fixie. Sustainable typewriter health goth church-key, migas lo-fi kale chips letterpress microdosing yr cliche fixie sartorial lomo.
+		  <br>
 		  </div>
-		  <div class="col-sm-4"><h2>visualization</h2></div>
+		  <div class="col-sm-4"><h2>visualization</h2>
+		  <br>
+		  3 wolf moon messenger bag echo park, selvage cred everyday carry intelligentsia authentic yr leggings neutra four dollar toast banh mi vegan. Dreamcatcher tousled actually fap iPhone, man braid banjo everyday carry. Church-key flexitarian 8-bit gluten-free polaroid, bespoke affogato. Biodiesel keytar DIY, pinterest butcher locavore knausgaard ugh iPhone yr ethical keffiyeh bicycle rights plaid. Ugh blue bottle kogi fap listicle. Shabby chic franzen sustainable 3 wolf moon fixie. Sustainable typewriter health goth church-key, migas lo-fi kale chips letterpress microdosing yr cliche fixie sartorial lomo.
+		  <br>
+		  </div>
             </div>
     </section>
 
@@ -117,19 +131,8 @@
         <div class="container">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>contact me</h2>
+                <p>If you have any questions about my work or just want to say hi, feel free to email me!
                 <p><a href="mailto:heidi.a.whiting@gmail.com">heidi.a.whiting@gmail.com</a>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://www.linkedin.com/in/heidiwhiting" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/hbergen" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
-                </ul>
             </div>
         </div>
       </div>
@@ -137,13 +140,6 @@
 
     <!-- Map Section -->
     <div id="map"></div>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container text-center">
-            <p>Copyright &copy; Heidi Whiting 2016</p>
-        </div>
-    </footer>
 
     <!-- jQuery -->
     <script src="static/js/jquery.js"></script>
@@ -159,9 +155,12 @@
      <div id="map" class="center-block"></div>
      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBH07tedBskp9GxbeXz6yGGn1s9bMSdVhw&sensor=false"></script>
 
-<!--
-   <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBH07tedBskp9GxbeXz6yGGn1s9bMSdVhw&q=71.0378379,-110.05995059999998"></iframe>
--->
+    <footer>
+        <div class="container text-center">
+            <p>&copy; Heidi Whiting 2016. 
+            <br>This is a static site built using python flask for heroku deployment, with a modified <a href="http://startbootstrap.com/template-overviews/grayscale/">Grayscale</a> theme. You can get my code for it <a href="https://github.com/hbergen/heroku-flask-portfolio">here on GitHub.</a></p>
+        </div>
+    </footer>
     <!-- Custom Theme JavaScript -->
     <script src="static/js/grayscale.js"></script>
 
