--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -27,7 +27,9 @@
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+         <script> document.createElement("p2"); </script>
     <![endif]-->
+
 
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
@@ -102,28 +104,62 @@
     </section>
 
     <!-- Portfolio Section -->
-    <section id="portfolio" class="container content-section text-center">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <div class="row">
-		  <div class="col-sm-4"><h2>projects</h2>
-		  <br>
-		  Sartorial tofu tilde, fixie flexitarian gastropub leggings ethical marfa kitsch truffaut gentrify plaid tacos. Roof party paleo heirloom skateboard, yr pour-over organic truffaut master cleanse blue bottle chillwave kinfolk seitan tacos. Small batch kickstarter bitters, tousled bushwick cronut church-key green juice squid YOLO. Pop-up jean shorts pickled knausgaard squid, godard bespoke fap heirloom migas tousled pabst. Migas blog 3 wolf moon pop-up lomo, tofu literally pabst single-origin coffee austin. Twee fap sartorial, DIY brunch disrupt mlkshk yr etsy. Freegan kale chips banjo, blog lomo venmo whatever yr cronut biodiesel photo booth street art bushwick squid ethical.
-		  <br>
-		  </div>
-		  <div class="col-sm-4"> 
-		  <h2>code</h2>
-		  <br>
-		  3 wolf moon messenger bag echo park, selvage cred everyday carry intelligentsia authentic yr leggings neutra four dollar toast banh mi vegan. Dreamcatcher tousled actually fap iPhone, man braid banjo everyday carry. Church-key flexitarian 8-bit gluten-free polaroid, bespoke affogato. Biodiesel keytar DIY, pinterest butcher locavore knausgaard ugh iPhone yr ethical keffiyeh bicycle rights plaid. Ugh blue bottle kogi fap listicle. Shabby chic franzen sustainable 3 wolf moon fixie. Sustainable typewriter health goth church-key, migas lo-fi kale chips letterpress microdosing yr cliche fixie sartorial lomo.
-		  <br>
-		  </div>
-		  <div class="col-sm-4"><h2>visualization</h2>
-		  <br>
-		  3 wolf moon messenger bag echo park, selvage cred everyday carry intelligentsia authentic yr leggings neutra four dollar toast banh mi vegan. Dreamcatcher tousled actually fap iPhone, man braid banjo everyday carry. Church-key flexitarian 8-bit gluten-free polaroid, bespoke affogato. Biodiesel keytar DIY, pinterest butcher locavore knausgaard ugh iPhone yr ethical keffiyeh bicycle rights plaid. Ugh blue bottle kogi fap listicle. Shabby chic franzen sustainable 3 wolf moon fixie. Sustainable typewriter health goth church-key, migas lo-fi kale chips letterpress microdosing yr cliche fixie sartorial lomo.
-		  <br>
-		  </div>
-            </div>
-    </section>
+<section id="portfolio" class="container content-section">
+<div class="col-sm-6">
+	<h4>Current work</h4>
+	<p2>
+	     3 wolf moon messenger bag echo park, selvage cred everyday carry intelligentsia authentic yr leggings neutra four dollar toast banh mi vegan. 
+	 </p2>
+	 <br><br><br>
+	<h4>Research</h4>
+	<p2>
+	I have participated in a number of research projects, some of which are listed below. My work for these primarily involved gathering, cleaning, and preparing data for analysis according to study objectives. 
+	</p2>
+	<br><br>
+	<p2 style="font-family:Courier">
+	Hutton, Jessica et al. 2015. <i>Analysis of naturalistic driving study data: offset left-turn lanes</i>. Kansas City, Mo: MRIGlobal
+	<br>
+	<a href="http://onlinepubs.trb.org/onlinepubs/shrp2/SHRP2_S2-S08B-RW-1.pdf">Link</a>
+	<br><br>
+	Miglioretti, Diana et al. 2015. <i>Breast Tumor Prognostic Characteristics and Biennial vs Annual Mammography, Age, and Menopausal Status.</i> Breast Cancer Surveillance Consortium.
+	<br>
+	<a href="http://www.ncbi.nlm.nih.gov/pubmed/26501844">Link</a>
+	<br><br>
+	Kerlikowski, Karla et al. 2015. <i>Identifying Women With Dense Breasts at High Risk for
+Interval Cancer</i>. Breast Cancer Surveillance Consortium.
+<br>
+	<a href="http://assets.krebsliga.ch/downloads/identifying_women_with_dense_breasts_at_high_risk_for_interval_cancer.pdf">Link</a>
+	</p2>
+	<br><br><br>
+	<h4>Master's Thesis</h4>
+	<p2 style="font-family:Courier">
+	Whiting, Heidi and Mitrea, Dorina. 2009. <i>A priori estimates for elliptic partial differential equations on surfaces</i>. Columbia, Mo: University of Missouri--Columbia.
+	<br>
+	<a href="http://www.worldcat.org/title/priori-estimates-for-solutions-of-elliptic-partial-differential-equations-on-surfaces/oclc/703919842">Link</a>
+	</p2>
+</div>
+<div class="col-sm-6">
+	<h4>Code</h4>
+	<p2>
+	I currently use a combination of python, SQL, and SAS for coding projects.
+	<br><br>
+	Check out some of my code and projects on <a href="https://github.com/hbergen">GitHub</a>
+	</p2>
+	<br><br><br>
+	<h4>Visualizations</h4>
+	<p2>
+	+ <a href="https://github.com/hbergen/python-machine-learning-helpers/blob/master/Seaborn%20Correlation%20Diagonal%20Matrix.ipynb">seaborn</a><br>
+	+ <a href="https://public.tableau.com/profile/heidi.whiting">
+	Tableau
+	</a>
+	<br><br>
+	  <a href="https://public.tableau.com/profile/heidi.whiting#!/">
+	  <img src="static/img/viz2.png" width=100%>
+	  </a>
+	  </p2>
+
+</div>
+</section>
 
     <!-- Contact Section -->
     <section id="contact" class="content-section text-center">
@@ -138,8 +174,12 @@
       </div>
     </section>
 
-    <!-- Map Section -->
-    <div id="map"></div>
+       <footer>
+        <div class="footer">
+            <p>&copy; Heidi Whiting 2016. 
+            <br>This is a static site built using python flask for heroku deployment, with a modified <a href="http://startbootstrap.com/template-overviews/grayscale/">Grayscale</a> theme. You can get my code for it <a href="https://github.com/hbergen/heroku-flask-portfolio">here on GitHub.</a></p>
+        </div>
+    </footer>
 
     <!-- jQuery -->
     <script src="static/js/jquery.js"></script>
@@ -150,17 +190,6 @@
     <!-- Plugin JavaScript -->
     <script src="static/js/jquery.easing.min.js"></script>
 
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-
-     <div id="map" class="center-block"></div>
-     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBH07tedBskp9GxbeXz6yGGn1s9bMSdVhw&sensor=false"></script>
-
-    <footer>
-        <div class="container text-center">
-            <p>&copy; Heidi Whiting 2016. 
-            <br>This is a static site built using python flask for heroku deployment, with a modified <a href="http://startbootstrap.com/template-overviews/grayscale/">Grayscale</a> theme. You can get my code for it <a href="https://github.com/hbergen/heroku-flask-portfolio">here on GitHub.</a></p>
-        </div>
-    </footer>
     <!-- Custom Theme JavaScript -->
     <script src="static/js/grayscale.js"></script>
 
