--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -95,11 +95,11 @@
                 <p>
                 	<img src="static/img/me.jpg" class="img-circle" alt="Me!" height=200px>
                 	</p>
-                	<br>
-                	Hipster ipsums courtesy of hipsum.co.
-                	Sartorial tofu tilde, fixie flexitarian gastropub leggings ethical marfa kitsch truffaut gentrify plaid tacos. Roof party paleo heirloom skateboard, yr pour-over organic truffaut master cleanse blue bottle chillwave kinfolk seitan tacos. Small batch kickstarter bitters, tousled bushwick cronut church-key green juice squid YOLO. Pop-up jean shorts pickled knausgaard squid, godard bespoke fap heirloom migas tousled pabst. Migas blog 3 wolf moon pop-up lomo, tofu literally pabst single-origin coffee austin. Twee fap sartorial, DIY brunch disrupt mlkshk yr etsy. Freegan kale chips banjo, blog lomo venmo whatever yr cronut biodiesel photo booth street art bushwick squid ethical.
                 	<p>
-                	                   <a href="http://www.linkedin.com/heidiwhiting" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn</span></a>
+                	I'm Heidi Whiting, an analyst based in <i>Seattle, Washington</i>. 
+                	<br>
+
+                	</p>
         </div>
     </section>
 
@@ -108,8 +108,22 @@
 <div class="col-sm-6">
 	<h4>Current work</h4>
 	<p2>
-	     3 wolf moon messenger bag echo park, selvage cred everyday carry intelligentsia authentic yr leggings neutra four dollar toast banh mi vegan. 
+	<b>Senior Marketing Analyst, June 2015 - Present</b>
+	<br><i>Nordstrom, Inc., Seattle, Wa</i>
+	<br> <br>
+	In my current role, I lead analyses from start to finish in support of marketing while leveraging new tools, refining documentation, and automating processes wherever possible. 
+	<br><br>
+	In my spare time, I'm engaged in 
+	<ul>
+	<li>studying for my <a href="https://www.coursera.org/specializations/machine-learning" target="_blank">Coursera Machine Learning Specialization</a>;
+	<li>summarizing all <a href="https://www.overleaf.com/read/ndqcxvkpcvwj" target="_blank">my notes in LaTeX</a>;
+	<li>volunteering with <a href="http://www.collegeaccessnow.org/" target="_blank">College Access Now</a> to help improve graduation rates for at-risk students;
+	<li>attending technology meetups around Seattle; and
+	<li>reading blogs, stackoverflow posts, and github repositories in an attempt to keep up with the myriad new packages and tools that are being released from the open source community.
+	</ul>
 	 </p2>
+	 <br><div class="text-center">
+	        <a href="https://www.linkedin.com/in/heidiwhiting" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn</span></a></div>
 	 <br><br><br>
 	<h4>Research</h4>
 	<p2>
@@ -119,43 +133,49 @@
 	<p2 style="font-family:Courier">
 	Hutton, Jessica et al. 2015. <i>Analysis of naturalistic driving study data: offset left-turn lanes</i>. Kansas City, Mo: MRIGlobal
 	<br>
-	<a href="http://onlinepubs.trb.org/onlinepubs/shrp2/SHRP2_S2-S08B-RW-1.pdf">Link</a>
+	<a href="http://onlinepubs.trb.org/onlinepubs/shrp2/SHRP2_S2-S08B-RW-1.pdf" target="_blank">Link</a>
 	<br><br>
 	Miglioretti, Diana et al. 2015. <i>Breast Tumor Prognostic Characteristics and Biennial vs Annual Mammography, Age, and Menopausal Status.</i> Breast Cancer Surveillance Consortium.
 	<br>
-	<a href="http://www.ncbi.nlm.nih.gov/pubmed/26501844">Link</a>
+	<a href="http://www.ncbi.nlm.nih.gov/pubmed/26501844" target="_blank">Link</a>
 	<br><br>
 	Kerlikowski, Karla et al. 2015. <i>Identifying Women With Dense Breasts at High Risk for
 Interval Cancer</i>. Breast Cancer Surveillance Consortium.
 <br>
-	<a href="http://assets.krebsliga.ch/downloads/identifying_women_with_dense_breasts_at_high_risk_for_interval_cancer.pdf">Link</a>
+	<a href="http://assets.krebsliga.ch/downloads/identifying_women_with_dense_breasts_at_high_risk_for_interval_cancer.pdf" target="_blank">Link</a>
 	</p2>
 	<br><br><br>
 	<h4>Master's Thesis</h4>
 	<p2 style="font-family:Courier">
 	Whiting, Heidi and Mitrea, Dorina. 2009. <i>A priori estimates for elliptic partial differential equations on surfaces</i>. Columbia, Mo: University of Missouri--Columbia.
 	<br>
-	<a href="http://www.worldcat.org/title/priori-estimates-for-solutions-of-elliptic-partial-differential-equations-on-surfaces/oclc/703919842">Link</a>
+	<a href="http://www.worldcat.org/title/priori-estimates-for-solutions-of-elliptic-partial-differential-equations-on-surfaces/oclc/703919842" target="_blank">Link</a>
 	</p2>
 </div>
 <div class="col-sm-6">
 	<h4>Code</h4>
 	<p2>
-	I currently use a combination of python, SQL, and SAS for coding projects.
+	I currently use a combination of python, SQL, and SAS for coding projects. 
 	<br><br>
-	Check out some of my code and projects on <a href="https://github.com/hbergen">GitHub</a>
+	I have created this static website from the ground up using the <a href="http://flask.pocoo.org/">python flask</a> web framework, with deployment on heroku. This site is bootstrapped using a modified <a href="http://startbootstrap.com/template-overviews/grayscale/" target="_blank">Grayscale</a> theme. 
+	<br><br>
+	Check out some of my code and projects on <a href="https://github.com/hbergen" target="_blank">GitHub</a>
 	</p2>
 	<br><br><br>
 	<h4>Visualizations</h4>
 	<p2>
-	+ <a href="https://github.com/hbergen/python-machine-learning-helpers/blob/master/Seaborn%20Correlation%20Diagonal%20Matrix.ipynb">seaborn</a><br>
-	+ <a href="https://public.tableau.com/profile/heidi.whiting">
+	+ <a href="https://github.com/hbergen/python-machine-learning-helpers/blob/master/Seaborn%20Correlation%20Diagonal%20Matrix.ipynb" target="_blank">seaborn</a><br>
+	+ <a href="https://public.tableau.com/profile/heidi.whiting" target="_blank">
 	Tableau
 	</a>
 	<br><br>
-	  <a href="https://public.tableau.com/profile/heidi.whiting#!/">
+	  <a href="https://public.tableau.com/profile/heidi.whiting#!/" target="_blank">
 	  <img src="static/img/viz2.png" width=100%>
 	  </a>
+	  <br><br>
+	  <a href="https://public.tableau.com/profile/heidi.whiting#!/" target="_blank">
+	  <img src="static/img/viz1.png" width=100%>
+	  </a>	  
 	  </p2>
 
 </div>
@@ -177,7 +197,7 @@ Interval Cancer</i>. Breast Cancer Surveillance Consortium.
        <footer>
         <div class="footer">
             <p>&copy; Heidi Whiting 2016. 
-            <br>This is a static site built using python flask for heroku deployment, with a modified <a href="http://startbootstrap.com/template-overviews/grayscale/">Grayscale</a> theme. You can get my code for it <a href="https://github.com/hbergen/heroku-flask-portfolio">here on GitHub.</a></p>
+            <br>Fork this site <a href="https://github.com/hbergen/heroku-flask-portfolio">on GitHub</a>!</p>
         </div>
     </footer>
 
