Fix some agregious css and clean up html

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -45,7 +45,7 @@
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-custom navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
@@ -99,48 +99,43 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="container content-section text-center" width=50%>
+    <section id="about" class="container content-section text-center about-size">
         <div class="row">
                 <h2>About</h2>
-                <p>
-                	<img src="static/img/me.jpg" class="img-circle" alt="Me!" height=200px>
-                	</p>
-                	<p>
+                	<img src="static/img/me.jpg" class="img-circle" alt="Me!" height=200>
+                	<br><br>
                 	I'm Heidi Whiting, an analyst based in <i>Seattle, Washington</i>. 
-                	<br>
-
-                	</p>
         </div>
     </section>
 
     <!-- Portfolio Section -->
-<section id="portfolio" class="container content-section">
-<div class="col-sm-6">
-	<h4>Current work</h4>
-	<p2>
-	<b>Senior Marketing Analyst, June 2015 - Present</b>
+<section id="portfolio" class="container content-section portfolio-size">
+    <div class="col-sm-6">
+	<h3>Current work</h3>
+	<p>
+	<strong>Senior Marketing Analyst, June 2015 - Present</strong>
 	<br><i>Nordstrom, Inc., Seattle, Wa</i>
 	<br> <br>
 	In my current role, I lead analyses from start to finish in support of marketing while leveraging new tools, refining documentation, and automating processes wherever possible. 
-	<br><br>
+
 	In my spare time, I'm engaged in 
-	<ul>
-	<li>studying for my <a href="https://www.coursera.org/specializations/machine-learning" target="_blank">Coursera Machine Learning Specialization</a>;
-	<li>summarizing all <a href="https://www.overleaf.com/read/ndqcxvkpcvwj" target="_blank">my notes in LaTeX</a>;
-	<li>volunteering with <a href="http://www.collegeaccessnow.org/" target="_blank">College Access Now</a> to help improve graduation rates for at-risk students;
-	<li>attending technology meetups around Seattle; and
-	<li>reading blogs, stackoverflow posts, and github repositories in an attempt to keep up with the myriad new packages and tools that are being released from the open source community.
+	<ul style="font-size:16px;">
+	<li>studying for my <a href="https://www.coursera.org/specializations/machine-learning" target="_blank">Coursera Machine Learning Specialization</a>;</li>
+	<li>summarizing all <a href="https://www.overleaf.com/read/ndqcxvkpcvwj" target="_blank">my notes in LaTeX</a>;</li>
+	<li>volunteering with <a href="http://www.collegeaccessnow.org/" target="_blank">College Access Now</a> to mentor college students in professional development;</li>
+	<li>attending technology meetups around Seattle; and</li>
+	<li>reading blogs, stackoverflow posts, and github repositories in an attempt to keep up with the myriad new packages and tools that are being released from the open source community.</li>
 	</ul>
-	 </p2>
-	 <br><div class="text-center">
-	        <a href="https://www.linkedin.com/in/heidiwhiting" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn</span></a></div>
-	 <br><br><br>
-	<h4>Research</h4>
-	<p2>
+	<br>
+	 <div class="text-center">
+	        <a href="https://www.linkedin.com/in/heidiwhiting" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn</span></a>
+	 </div>
+	 </p>
+	<h3>Research</h3>
+	<p>
 	I have participated in a number of research projects, some of which are listed below. My work for these primarily involved gathering, cleaning, and preparing data for analysis according to study objectives. 
-	</p2>
-	<br><br>
-	<p2 style="font-family:Courier">
+	</p>
+	<p style="font-size:14px;">
 	Hutton, Jessica et al. 2015. <i>Analysis of naturalistic driving study data: offset left-turn lanes</i>. Kansas City, Mo: MRIGlobal
 	<br>
 	<a href="http://onlinepubs.trb.org/onlinepubs/shrp2/SHRP2_S2-S08B-RW-1.pdf" target="_blank">Link</a>
@@ -149,59 +144,53 @@
 	<br>
 	<a href="http://www.ncbi.nlm.nih.gov/pubmed/26501844" target="_blank">Link</a>
 	<br><br>
-	Kerlikowski, Karla et al. 2015. <i>Identifying Women With Dense Breasts at High Risk for
-Interval Cancer</i>. Breast Cancer Surveillance Consortium.
-<br>
+	Kerlikowski, Karla et al. 2015. <i>Identifying Women With Dense Breasts at High Risk for Interval Cancer</i>. Breast Cancer Surveillance Consortium.
+	<br>
 	<a href="http://assets.krebsliga.ch/downloads/identifying_women_with_dense_breasts_at_high_risk_for_interval_cancer.pdf" target="_blank">Link</a>
-	</p2>
-	<br><br><br>
-	<h4>Master's Thesis</h4>
-	<p2 style="font-family:Courier">
+	</p>
+
+	<h3>Master's Thesis</h3>
+	<p style="font-size:14px;">
 	Whiting, Heidi and Mitrea, Dorina. 2009. <i>A priori estimates for elliptic partial differential equations on surfaces</i>. Columbia, Mo: University of Missouri--Columbia.
 	<br>
 	<a href="http://www.worldcat.org/title/priori-estimates-for-solutions-of-elliptic-partial-differential-equations-on-surfaces/oclc/703919842" target="_blank">Link</a>
-	</p2>
-</div>
-<div class="col-sm-6">
-	<h4>Code</h4>
-	<p2>
+	</p>
+    </div>
+    <div class="col-sm-6">
+	<h3>Code</h3>
+	<p>
 	I currently use a combination of python, SQL, and SAS for coding projects. 
 	<br><br>
 	I have created this static website from the ground up using the <a href="http://flask.pocoo.org/">python flask</a> web framework, with deployment on heroku. This site is bootstrapped using a modified <a href="http://startbootstrap.com/template-overviews/grayscale/" target="_blank">Grayscale</a> theme. 
 	<br><br>
 	Check out some of my code and projects on <a href="https://github.com/hbergen" target="_blank">GitHub</a>
-	</p2>
-	<br><br><br>
-	<h4>Visualizations</h4>
-	<p2>
+	</p>
+	<h3>Visualizations</h3>
+	<p>
 	+ <a href="https://github.com/hbergen/python-machine-learning-helpers/blob/master/Seaborn%20Correlation%20Diagonal%20Matrix.ipynb" target="_blank">seaborn</a><br>
 	+ <a href="https://public.tableau.com/profile/heidi.whiting" target="_blank">
 	Tableau
 	</a>
 	<br><br>
 	  <a href="https://public.tableau.com/profile/heidi.whiting#!/" target="_blank">
-	  <img src="static/img/viz2.png" width=100%>
+	  <img src="static/img/viz2.png" width=100% alt="Example Tableau visualization 1">
 	  </a>
 	  <br><br>
 	  <a href="https://public.tableau.com/profile/heidi.whiting#!/" target="_blank">
-	  <img src="static/img/viz1.png" width=100%>
-	  </a>	  
-	  </p2>
-
-</div>
+	  <img src="static/img/viz1.png" width=100% alt="Example Tableau visualization 2">
+	  </a>	 
+	 </p> 
+    </div>
 </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="content-section text-center">
+    <section id="contact" class="content-section text-center contact-size">
       <div class="portfolio-section">
-        <div class="container">
-            <div class="col-lg-8 col-lg-offset-2">
                 <h2>contact me</h2>
-                <p>If you have any questions about my work or just want to say hi, feel free to email me!
-                <p><a href="mailto:heidi.a.whiting@gmail.com">heidi.a.whiting@gmail.com</a>
-            </div>
+                If you have any questions about my work or just want to say hi, feel free to email me!
+                <br><br>
+                <a href="mailto:heidi.a.whiting@gmail.com">heidi.a.whiting@gmail.com</a>
         </div>
-      </div>
     </section>
 
        <footer>
