--- a/app/static/css/grayscale.css
+++ b/app/static/css/grayscale.css
@@ -7,7 +7,7 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
     color: #fff;
     background-color: #000;
 }
@@ -32,22 +32,15 @@ h6 {
 
 p {
     margin: 0 0 25px;
-    font-size: 18px;
     line-height: 1.5;
-}
-
-p2 {
-    margin-bottom: 16px;
-    font-size: 14px;
-    line-height: 1.5;
+    padding-bottom: 10px;
 }
 
 
 @media(min-width:768px) {
     p {
-        margin: 0 0 35px;
-        font-size: 20px;
-        line-height: 1.6;
+        margin: 0 0 25px;
+        line-height: 1.5;
     }
 }
 
@@ -151,7 +144,7 @@ a:focus {
     display: table;
     width: 100%;
     height: auto;
-    padding: 50px 0;
+    padding: 100px 0;
     text-align: center;
     color: #fff;
     background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
@@ -186,7 +179,7 @@ a:focus {
     }
 
     .intro .intro-body .intro-text {
-        font-size: 26px;
+        font-size: 26px !important;
     }
 }
 
@@ -268,6 +261,14 @@ a:focus {
     padding-top: 50px;
 }
 
+.about-size{
+    font-size: 18px;
+}
+
+.contact-size{
+    font-size:18px;
+}
+
 .portfolio-section {
     width: 100%;
     padding: 50px 0;
@@ -278,6 +279,10 @@ a:focus {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+}
+
+.portfolio-size{
+    font-size: 16px;
 }
 
 #map {
