--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -105,7 +105,7 @@
                 <h2>About</h2>
                 	<img src="static/img/me.jpg" class="img-circle" alt="Me!" height=200>
                 	<p style="padding-left:25px; padding-right:25px;">
-                	I'm Heidi Whiting, an analyst based in <i>Seattle, Washington</i>. 
+                	I'm Heidi Whiting, a data scientist based in <i>Seattle, Washington</i>. 
                 	</p>
         </div>
     </section>
@@ -115,7 +115,7 @@
     <div class="col-sm-6">
 	<h3>Current work</h3>
 	<p>
-	<strong>Senior Marketing Analyst, June 2015 - Present</strong>
+	<strong>Data Scientist II, June 2015 - Present</strong>
 	<br><i>Nordstrom, Inc., Seattle, Wa</i>
 	<br> <br>
 	In my current role, I lead analyses from start to finish in support of marketing while leveraging new tools, refining documentation, and automating processes wherever possible. 
