add changes to description

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -105,7 +105,7 @@
                 <h2>About</h2>
                 	<img src="static/img/me.jpg" class="img-circle" alt="Me!" height=200>
                 	<p style="padding-left:25px; padding-right:25px;">
-                	I'm Heidi Whiting, a data scientist based in <i>Seattle, Washington</i>. 
+                	I'm Heidi Whiting, a data scientist based in <i>Seattle, Washington</i>.
                 	</p>
         </div>
     </section>
@@ -118,9 +118,9 @@
 	<strong>Data Scientist II, June 2015 - Present</strong>
 	<br><i>Nordstrom, Inc., Seattle, Wa</i>
 	<br> <br>
-	In my current role, I lead analyses from start to finish in support of marketing while leveraging new tools, refining documentation, and automating processes wherever possible. 
+	In my current role, I lead analyses from start to finish in support of marketing while leveraging new tools, refining documentation, and automating processes wherever possible.
 
-	In my spare time, I'm engaged in 
+	In my spare time, I'm engaged in
 	<ul style="font-size:16px;">
 	<li>studying for my <a href="https://www.coursera.org/specializations/machine-learning" target="_blank">Coursera Machine Learning Specialization</a>;</li>
 	<li>summarizing all <a href="https://www.overleaf.com/read/ndqcxvkpcvwj" target="_blank">my notes in LaTeX</a>;</li>
@@ -135,7 +135,7 @@
 	 </p>
 	<h3>Research</h3>
 	<p>
-	I have participated in a number of research projects, some of which are listed below. My work for these primarily involved gathering, cleaning, and preparing data for analysis according to study objectives. 
+	I have participated in a number of research projects, some of which are listed below. My work for these primarily involved gathering, cleaning, and preparing data for analysis according to study objectives.
 	</p>
 	<p style="font-size:14px;">
 	Hutton, Jessica et al. 2015. <i>Analysis of naturalistic driving study data: offset left-turn lanes</i>. Kansas City, Mo: MRIGlobal
@@ -161,9 +161,9 @@
     <div class="col-sm-6">
 	<h3>Code</h3>
 	<p>
-	I currently use a combination of python, SQL, and SAS for coding projects. 
+	I currently use python for most projects and analyses.
 	<br><br>
-	I have created this static website from the ground up using the <a href="http://flask.pocoo.org/">python flask</a> web framework, with deployment on heroku. This site is bootstrapped using a modified <a href="http://startbootstrap.com/template-overviews/grayscale/" target="_blank">Grayscale</a> theme. 
+	I have created this static website from the ground up using the <a href="http://flask.pocoo.org/">python flask</a> web framework, with deployment on heroku. This site is bootstrapped using a modified <a href="http://startbootstrap.com/template-overviews/grayscale/" target="_blank">Grayscale</a> theme.
 	<br><br>
 	Check out some of my code and projects on <a href="https://github.com/hbergen" target="_blank">GitHub</a>
 	</p>
@@ -180,8 +180,8 @@
 	  <br><br>
 	  <a href="https://public.tableau.com/profile/heidi.whiting#!/" target="_blank">
 	  <img src="static/img/viz1.png" width=100% alt="Example Tableau visualization 2">
-	  </a>	 
-	 </p> 
+	  </a>
+	 </p>
     </div>
 </section>
 
@@ -203,7 +203,7 @@
 
        <footer>
         <div class="footer">
-            <p>&copy; Heidi Whiting 2016. 
+            <p>&copy; Heidi Whiting 2016.
             <br>Fork this site <a href="https://github.com/hbergen/heroku-flask-portfolio">on GitHub</a>!</p>
         </div>
     </footer>
