--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -16,6 +16,7 @@
 
 	<!-- Custom CSS -->
 	<link href="static/css/grayscale.css" rel="stylesheet">
+	<link href="static/color/default.css" rel="stylesheet">
 
 	<!-- Custom Fonts -->
 	<link href="static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
